--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [tool.poetry]
 name = "ogadf_schema"
+# the version should reference the version of the schema it checks
 version = "0.2.0"
 description = ""
 authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
@@ -7,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.6"
-fits-schema = "^0.4.0"
+fits-schema = "^0.5.1"
 
 
 [tool.poetry.dev-dependencies]
