--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "ogadf_schema"
-# the version should reference the version of the schema it checks
-version = "0.2.1"
-description = "Schema defintions for the Data Formats For Gamma-Ray Astronomy"
+# the minor version should reference the version of the schema it checks
+version = "0.2.2"
+description = "Schema definitions for the Data Formats For Gamma-Ray Astronomy"
 authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
 readme = "README.md"
 
