--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "ogadf_schema"
 # the minor version should reference the version of the schema it checks
-version = "0.2.3"
+version = "0.2.4"
 description = "Schema definitions for the Data Formats For Gamma-Ray Astronomy"
 authors = ["Maximilian Nöthe <maximilian.noethe@tu-dortmund.de>"]
 readme = "README.md"
@@ -20,5 +20,5 @@ ipython = "^7.13.0"
 [tool.poetry.extras]
 
 [build-system]
-requires = ["poetry>=1.0"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0", "setuptools"]
+build-backend = "poetry.core.masonry.api"
